tests/analyze/when-non-exhaustive/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Non-exhaustive `when`: missing case for `node`.
> 7 | 	when t is empty {
       ^^^^^^^^^^^^^^^^^

error: Non-exhaustive `when`: missing case for `node`.
> 13 | 	when t is empty {
        ^^^^^^^^^^^^^^^^^

error: Non-exhaustive `when`: missing case for `false`.
> 21 | 	when b is true {
        ^^^^^^^^^^^^^^^^

